<resources>
    <string name="app_name">TMDB</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">TMDB Popular Movies</string>
    <string name="api_key">e3f71527ffb881dde512a181284dbd31</string>
    <string name="movie_image_base_url">https://image.tmdb.org/t/p/w500</string>
    <string name="title_activity_movie">Movie</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="upcoming_title">Upcoming</string>
    <string name="popular_title">Popular</string>
    <string name="now_playing_title">Now Playing</string>
</resources>
